# snapped_cpp_cmake

./: .gitignore  CMakeLists.txt  README.md  main.cpp
snap/: snapcraft.yaml
